fixing general scroll and removing double scrolling

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,4 +2,7 @@
 body {
 height: auto;
 background-image: url("./assets/img/backgrounds/bg1.jpg");
+margin: 0; height: 100%; overflow: hidden
 }
+
+html{margin: 0; height: 100%; overflow: hidden}
